--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,6 @@ jobs:
       - name: Update ECS service
         run: |
           aws ecs update-service \
-            --cluster data-processing-cluster \
+            --cluster default \
             --service epa-processor-service \
             --force-new-deployment
