--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,3 +56,4 @@ jobs:
             --cluster default \
             --service epa-processor-service \
             --force-new-deployment
+            --task-definition epa-processor-task:3
