--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,21 @@
 name: EPA Data Pipeline CI/CD
 
 on:
-  push:
+  pull_request:
     branches: 
       - main
       - test
-  workflow_dispatch:    # Allows manual trigger from GitHub UI
 
 env:
   AWS_REGION: us-east-1  # Change this to your AWS region
   ECR_REPOSITORY: epa-data-processor
-
+  ECS_SERVICE: epa-service
+  ECS_CLUSTER: epa-cluster
+  ECS_TASK_DEFINITION: .aws\epa-task-revision1.json
+  SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
+  SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+  SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+  CONTAINER_NAME: epa-test
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -18,7 +23,7 @@ jobs:
       ENVIRONMENT: ${{ github.ref == 'refs/heads/main' && 'PROD' || 'TEST' }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -35,25 +40,32 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
-          SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
-          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+
         run: |
           echo "Building for environment: ${ENVIRONMENT}"
           docker build \
             --build-arg SNOWFLAKE_USER=${SNOWFLAKE_USER} \
             --build-arg SNOWFLAKE_PASSWORD=${SNOWFLAKE_PASSWORD} \
             --build-arg SNOWFLAKE_ACCOUNT=${SNOWFLAKE_ACCOUNT} \
+            --build-arg ENVIRONMENT=${ENVIRONMENT} \
             -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           # Also tag as latest
           docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest-${ENVIRONMENT}
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest-${ENVIRONMENT}
 
-      - name: Update ECS service
-        run: |
-          aws ecs update-service \
-            --cluster default \
-            --service epa-processor-service \
-            --force-new-deployment \
-            --task-definition epa-processor-task:3
+      - name: Fill in the new image ID in the Amazon ECS task definition
+      id: task-def
+      uses: aws-actions/amazon-ecs-render-task-definition@v1
+      with:
+        task-definition: ${{ env.ECS_TASK_DEFINITION }}
+        container-name: ${{ env.CONTAINER_NAME }}
+        image: ${{ steps.build-image.outputs.image }}
+
+      - name: Deploy Amazon ECS task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: ${{ env.ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
